pkg/parser/dml_parser.go
// Generated from DML.g4 by ANTLR 4.6.

package parser // DML

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// package org.gaterace.dml;

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa


var deserializer = antlr.NewATNDeserializer(nil)

var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'dml'", "'dmlfields'", "'dmlfield'", "'dmlinputs'", "'dmloutputs'",
	"'dmlqualid'", "'enum'", "'package'", "'import'", "'fieldset'", "'class'",
	"'table'", "'association'", "'service'", "'mediates'", "'method'", "'returns'",
	"'double'", "'float'", "'int32'", "'int64'", "'uint32'", "'uint64'", "'bool'",
	"'string'", "'bytes'", "'chararray'", "'bytearray'", "'datetime'", "'guid'",
	"'decimal'", "'auto'", "'id'", "'idgen'", "'required'", "'optional'", "'repeated'",
	"'virtual'", "'map'", "'list'", "'references'", "'index'", "'primary'",
	"'unique'", "'nonunique'", "'pattern'", "'insert'", "'update'", "'select'",
	"'delete'", "'extends'", "", "';'", "','", "':'", "'.'", "'+'", "'-'",
	"')'", "'('", "']'", "'['", "'{'", "'}'", "'='",
}

var symbolicNames = []string{
	"", "DML", "DMLFIELDS", "DMLFIELD", "DMLINPUTS", "DMLOUTPUTS", "DMLQUALID",
	"ENUM", "PACKAGE", "IMPORT", "FIELDSET", "CLASS", "TABLE", "ASSOCIATION",
	"SERVICE", "MEDIATES", "METHOD", "RETURNS", "DOUBLE", "FLOAT", "INT32",
	"INT64", "UINT32", "UINT64", "BOOL", "STRING", "BYTES", "CHARARRAY", "BYTEARRAY",
	"DATETIME", "GUID", "DECIMAL", "AUTO", "ID_KEYWORD", "IDGEN", "REQUIRED",
	"OPTIONAL", "REPEATED", "VIRTUAL", "MAP", "LIST", "REFERENCES", "INDEX",
	"PRIMARY", "UNIQUE", "NONUNIQUE", "PATTERN", "INSERT", "UPDATE", "SELECT",
	"DELETE", "EXTENDS", "INTEGER_NUM", "SEMI", "COMMA", "COLON", "DOT", "PLUS",
	"MINUS", "RPAREN", "LPAREN", "RBRACK", "LBRACK", "LBRACE", "RBRACE", "EQUALS",
	"WHITE_SPACE", "HEX_DIGIT", "REAL_NUMBER", "TEXT_STRING", "ID", "COMMENT",
	"KEEP_COMMENT", "LINE_COMMENT",
}

var ruleNames = []string{
	"model", "modelParts", "sourceElements", "sourceElement", "enumElement",
	"enumValues", "integerConst", "enumValue", "fieldsetElement", "extendsQualifier",
	"fieldsetValues", "fieldsetValue", "qualifiedId", "fieldType", "indexType",
	"indexElement", "classElement", "classOptions", "classOption", "fieldsetOption",
	"tableOption", "mediatesOption", "classFields", "referencesModifier", "classField",
	"parameterModifier", "fieldModifier", "associationElement", "associationOptions",
	"associationOption", "serviceElement", "patternType", "methodPattern",
	"methods", "method", "inputList", "fieldList", "fieldInstance", "methodReturn",
	"packageElement", "importElements",
}

type DMLParser struct {
	*antlr.BaseParser
}

func NewDMLParser(input antlr.TokenStream) *DMLParser {
	var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	var sharedContextCache = antlr.NewPredictionContextCache()

	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}

	this := new(DMLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, sharedContextCache)
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "DML.g4"

	return this
}

// DMLParser tokens.
const (
	DMLParserEOF          = antlr.TokenEOF
	DMLParserDML          = 1
	DMLParserDMLFIELDS    = 2
	DMLParserDMLFIELD     = 3
	DMLParserDMLINPUTS    = 4
	DMLParserDMLOUTPUTS   = 5
	DMLParserDMLQUALID    = 6
	DMLParserENUM         = 7
	DMLParserPACKAGE      = 8
	DMLParserIMPORT       = 9
	DMLParserFIELDSET     = 10
	DMLParserCLASS        = 11
	DMLParserTABLE        = 12
	DMLParserASSOCIATION  = 13
	DMLParserSERVICE      = 14
	DMLParserMEDIATES     = 15
	DMLParserMETHOD       = 16
	DMLParserRETURNS      = 17
	DMLParserDOUBLE       = 18
	DMLParserFLOAT        = 19
	DMLParserINT32        = 20
	DMLParserINT64        = 21
	DMLParserUINT32       = 22
	DMLParserUINT64       = 23
	DMLParserBOOL         = 24
	DMLParserSTRING       = 25
	DMLParserBYTES        = 26
	DMLParserCHARARRAY    = 27
	DMLParserBYTEARRAY    = 28
	DMLParserDATETIME     = 29
	DMLParserGUID         = 30
	DMLParserDECIMAL      = 31
	DMLParserAUTO         = 32
	DMLParserID_KEYWORD   = 33
	DMLParserIDGEN        = 34
	DMLParserREQUIRED     = 35
	DMLParserOPTIONAL     = 36
	DMLParserREPEATED     = 37
	DMLParserVIRTUAL      = 38
	DMLParserMAP          = 39
	DMLParserLIST         = 40
	DMLParserREFERENCES   = 41
	DMLParserINDEX        = 42
	DMLParserPRIMARY      = 43
	DMLParserUNIQUE       = 44
	DMLParserNONUNIQUE    = 45
	DMLParserPATTERN      = 46
	DMLParserINSERT       = 47
	DMLParserUPDATE       = 48
	DMLParserSELECT       = 49
	DMLParserDELETE       = 50
	DMLParserEXTENDS      = 51
	DMLParserINTEGER_NUM  = 52
	DMLParserSEMI         = 53
	DMLParserCOMMA        = 54
	DMLParserCOLON        = 55
	DMLParserDOT          = 56
	DMLParserPLUS         = 57
	DMLParserMINUS        = 58
	DMLParserRPAREN       = 59
	DMLParserLPAREN       = 60
	DMLParserRBRACK       = 61
	DMLParserLBRACK       = 62
	DMLParserLBRACE       = 63
	DMLParserRBRACE       = 64
	DMLParserEQUALS       = 65
	DMLParserWHITE_SPACE  = 66
	DMLParserHEX_DIGIT    = 67
	DMLParserREAL_NUMBER  = 68
	DMLParserTEXT_STRING  = 69
	DMLParserID           = 70
	DMLParserCOMMENT      = 71
	DMLParserKEEP_COMMENT = 72
	DMLParserLINE_COMMENT = 73
)

// DMLParser rules.
const (
	DMLParserRULE_model              = 0
	DMLParserRULE_modelParts         = 1
	DMLParserRULE_sourceElements     = 2
	DMLParserRULE_sourceElement      = 3
	DMLParserRULE_enumElement        = 4
	DMLParserRULE_enumValues         = 5
	DMLParserRULE_integerConst       = 6
	DMLParserRULE_enumValue          = 7
	DMLParserRULE_fieldsetElement    = 8
	DMLParserRULE_extendsQualifier   = 9
	DMLParserRULE_fieldsetValues     = 10
	DMLParserRULE_fieldsetValue      = 11
	DMLParserRULE_qualifiedId        = 12
	DMLParserRULE_fieldType          = 13
	DMLParserRULE_indexType          = 14
	DMLParserRULE_indexElement       = 15
	DMLParserRULE_classElement       = 16
	DMLParserRULE_classOptions       = 17
	DMLParserRULE_classOption        = 18
	DMLParserRULE_fieldsetOption     = 19
	DMLParserRULE_tableOption        = 20
	DMLParserRULE_mediatesOption     = 21
	DMLParserRULE_classFields        = 22
	DMLParserRULE_referencesModifier = 23
	DMLParserRULE_classField         = 24
	DMLParserRULE_parameterModifier  = 25
	DMLParserRULE_fieldModifier      = 26
	DMLParserRULE_associationElement = 27
	DMLParserRULE_associationOptions = 28
	DMLParserRULE_associationOption  = 29
	DMLParserRULE_serviceElement     = 30
	DMLParserRULE_patternType        = 31
	DMLParserRULE_methodPattern      = 32
	DMLParserRULE_methods            = 33
	DMLParserRULE_method             = 34
	DMLParserRULE_inputList          = 35
	DMLParserRULE_fieldList          = 36
	DMLParserRULE_fieldInstance      = 37
	DMLParserRULE_methodReturn       = 38
	DMLParserRULE_packageElement     = 39
	DMLParserRULE_importElements     = 40
)

// IModelContext is an interface to support dynamic dispatch.
type IModelContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsModelContext differentiates from other interfaces.
	IsModelContext()
}

type ModelContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModelContext() *ModelContext {
	var p = new(ModelContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DMLParserRULE_model
	return p
}

func (*ModelContext) IsModelContext() {}

func NewModelContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModelContext {
	var p = new(ModelContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DMLParserRULE_model

	return p
}

func (s *ModelContext) GetParser() antlr.Parser { return s.parser }

func (s *ModelContext) ModelParts() IModelPartsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IModelPartsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IModelPartsContext)
}

func (s *ModelContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ModelContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ModelContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DMLListener); ok {
		listenerT.EnterModel(s)
	}
}

func (s *ModelContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DMLListener); ok {
		listenerT.ExitModel(s)
	}
}

func (p *DMLParser) Model() (localctx IModelContext) {
	localctx = NewModelContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DMLParserRULE_model)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(82)
		p.ModelParts()
	}

	return localctx
}

// IModelPartsContext is an interface to support dynamic dispatch.
type IModelPartsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsModelPartsContext differentiates from other interfaces.
	IsModelPartsContext()
}

type ModelPartsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModelPartsContext() *ModelPartsContext {
	var p = new(ModelPartsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DMLParserRULE_modelParts
	return p
}

func (*ModelPartsContext) IsModelPartsContext() {}

func NewModelPartsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModelPartsContext {
	var p = new(ModelPartsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DMLParserRULE_modelParts

	return p
}

func (s *ModelPartsContext) GetParser() antlr.Parser { return s.parser }

func (s *ModelPartsContext) PackageElement() IPackageElementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPackageElementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPackageElementContext)
}

func (s *ModelPartsContext) SourceElements() ISourceElementsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISourceElementsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISourceElementsContext)
}

func (s *ModelPartsContext) EOF() antlr.TerminalNode {
	return s.GetToken(DMLParserEOF, 0)
}

func (s *ModelPartsContext) AllImportElements() []IImportElementsContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IImportElementsContext)(nil)).Elem())
	var tst = make([]IImportElementsContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IImportElementsContext)
		}
	}

	return tst
}

func (s *ModelPartsContext) ImportElements(i int) IImportElementsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportElementsContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IImportElementsContext)
}

func (s *ModelPartsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ModelPartsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ModelPartsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DMLListener); ok {
		listenerT.EnterModelParts(s)
	}
}

func (s *ModelPartsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DMLListener); ok {
		listenerT.ExitModelParts(s)
	}
}

func (p *DMLParser) ModelParts() (localctx IModelPartsContext) {
	localctx = NewModelPartsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DMLParserRULE_modelParts)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(84)
		p.PackageElement()
	}
	p.SetState(88)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == DMLParserIMPORT {
		{
			p.SetState(85)
			p.ImportElements()
		}

		p.SetState(90)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(91)
		p.SourceElements()
	}
	{
		p.SetState(92)
		p.Match(DMLParserEOF)
	}

	return localctx
}

// ISourceElementsContext is an interface to support dynamic dispatch.
type ISourceElementsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSourceElementsContext differentiates from other interfaces.
	IsSourceElementsContext()
}

type SourceElementsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceElementsContext() *SourceElementsContext {
	var p = new(SourceElementsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DMLParserRULE_sourceElements
	return p
}

func (*SourceElementsContext) IsSourceElementsContext() {}

func NewSourceElementsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceElementsContext {
	var p = new(SourceElementsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DMLParserRULE_sourceElements

	return p
}

func (s *SourceElementsContext) GetParser() antlr.Parser { return s.parser }

func (s *SourceElementsContext) AllSourceElement() []ISourceElementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ISourceElementContext)(nil)).Elem())
	var tst = make([]ISourceElementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ISourceElementContext)
		}
	}

	return tst
}

func (s *SourceElementsContext) SourceElement(i int) ISourceElementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISourceElementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ISourceElementContext)
}

func (s *SourceElementsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceElementsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SourceElementsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DMLListener); ok {
		listenerT.EnterSourceElements(s)
	}
}

func (s *SourceElementsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DMLListener); ok {
		listenerT.ExitSourceElements(s)
	}
}

func (p *DMLParser) SourceElements() (localctx ISourceElementsContext) {
	localctx = NewSourceElementsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DMLParserRULE_sourceElements)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(94)
		p.SourceElement()
	}
	p.SetState(98)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<DMLParserENUM)|(1<<DMLParserFIELDSET)|(1<<DMLParserCLASS)|(1<<DMLParserASSOCIATION)|(1<<DMLParserSERVICE))) != 0) || _la == DMLParserKEEP_COMMENT {
		{
			p.SetState(95)
			p.SourceElement()
		}

		p.SetState(100)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ISourceElementContext is an interface to support dynamic dispatch.
type ISourceElementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSourceElementContext differentiates from other interfaces.
	IsSourceElementContext()
}

type SourceElementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceElementContext() *SourceElementContext {
	var p = new(SourceElementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DMLParserRULE_sourceElement
	return p
}

func (*SourceElementContext) IsSourceElementContext() {}

func NewSourceElementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceElementContext {
	var p = new(SourceElementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DMLParserRULE_sourceElement

	return p
}

func (s *SourceElementContext) GetParser() antlr.Parser { return s.parser }

func (s *SourceElementContext) EnumElement() IEnumElementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEnumElementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEnumElementContext)
}

func (s *SourceElementContext) FieldsetElement() IFieldsetElementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFieldsetElementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFieldsetElementContext)
}

func (s *SourceElementContext) ClassElement() IClassElementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClassElementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IClassElementContext)
}

func (s *SourceElementContext) AssociationElement() IAssociationElementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAssociationElementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAssociationElementContext)
}

func (s *SourceElementContext) ServiceElement() IServiceElementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IServiceElementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IServiceElementContext)
}

func (s *SourceElementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceElementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SourceElementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DMLListener); ok {
		listenerT.EnterSourceElement(s)
	}
}

func (s *SourceElementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DMLListener); ok {
		listenerT.ExitSourceElement(s)
	}
}

func (p *DMLParser) SourceElement() (localctx ISourceElementContext) {
	localctx = NewSourceElementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, DMLParserRULE_sourceElement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(106)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(101)
			p.EnumElement()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(102)
			p.FieldsetElement()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(103)
			p.ClassElement()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(104)
			p.AssociationElement()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(105)
			p.ServiceElement()
		}

	}

	return localctx
}

// IEnumElementContext is an interface to support dynamic dispatch.
type IEnumElementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsEnumElementContext differentiates from other interfaces.
	IsEnumElementContext()
}

type EnumElementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEnumElementContext() *EnumElementContext {
	var p = new(EnumElementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = DMLParserRULE_enumElement
	return p
}

func (*EnumElementContext) IsEnumElementContext() {}

func NewEnumElementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EnumElementContext {
	var p = new(EnumElementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = DMLParserRULE_enumElement

	return p
}

func (s *EnumElementContext) GetParser() antlr.Parser { return s.parser }

func (s *EnumElementContext) ENUM() antlr.TerminalNode {
	return s.GetToken(DMLParserENUM, 0)
}

func (s *EnumElementContext) ID() antlr.TerminalNode {
	return s.GetToken(DMLParserID, 0)
}

func (s *EnumElementContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(DMLParserLBRACE, 0)
}

func (s *EnumElementContext) EnumValues() IEnumValuesContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEnumValuesContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEnumValuesContext)
}

func (s *EnumElementContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(DMLParserRBRACE, 0)
}

func (s *EnumElementContext) AllKEEP_COMMENT() []antlr.TerminalNode {
	return s.GetTokens(DMLParserKEEP_COMMENT)
}

func (s *EnumElementContext) KEEP_COMMENT(i int) antlr.TerminalNode {
	return s.GetToken(DMLParserKEEP_COMMENT, i)
}

func (s *EnumElementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EnumElementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EnumElementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DMLListener); ok {
		listenerT.EnterEnumElement(s)
	}
}

func (s *EnumElementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DMLListener); ok {
		listenerT.ExitEnumElement(s)
	}
}
